# charm

./: Cargo.toml  README.md  install.sh  mise.toml
.github/workflows/: release.yml
.lima/: charm-dev.yaml
examples/compose-demo/: Charm.toml  docker-compose.yml
examples/demo/: Charm.toml  Dockerfile
src/: app.rs  caddy.rs  cli.rs  doctor.rs  domains.rs  install.rs  keys.rs  main.rs  paths.rs  shell.rs  style.rs  tui.rs  uninstall.rs  util.rs
